// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SvgIcon rendering renders expected elements 1`] = `
<svg
  className="SvgIcon"
  focusable="false"
  style={
    {
      "width": "0.5em",
    }
  }
  viewBox="0 0 10 20"
>
  <path
    d="test path"
    fill="currentColor"
  />
</svg>
`;

exports[`SvgIcon rendering renders expected elements when optional properties are set 1`] = `
<svg
  aria-hidden={true}
  className="SvgIcon SvgIcon--spin TestClass"
  focusable="false"
  style={
    {
      "width": "0.5em",
    }
  }
  viewBox="0 0 10 20"
>
  <path
    d="test path"
    fill="currentColor"
  />
</svg>
`;
